tests/expectations/compiler/slice/array_slices_fail.out
Error [ETYC0372076]: An array cannot be empty
    --> compiler-test:3:17
     |
   3 |         let b = a[0..0];
     |                 ^^^^^^^
